updated version, fix names

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img
         id="ad_8"
         class="ad_8"
-        src="media/WhatsApp Image 2022-02-26 at 18.42.14.jpeg"
+        src="media/finalimg.jpeg"
       />
     </div>
     <div id="main">
@@ -32,7 +32,7 @@
           <img
             id="ad_1"
             class="ad_1"
-            src="media/WhatsApp Image 2022-02-26 at 18.42.14 (1).jpg"
+            src="media/congrats.jpg"
           />
         </div>
       </div>
@@ -40,7 +40,7 @@
         <img
           id="ad_2"
           class="ad_2"
-          src="media/WhatsApp Image 2022-02-26 at 18.42.13 (1).jpeg"
+          src="media/warning.jpeg"
         />
       </div>
       <!--first modal-->
@@ -158,7 +158,7 @@
         <img
           class="facebook_img"
           id="facebook_img"
-          src="media/3021307-inline-fb-likebutton-printpackaging.png"
+          src="media/fb_likebutton.png"
         />
       </div>
       <!--fourth modal: accepted third modal-->
@@ -377,35 +377,35 @@
         <img
           id="ad_3"
           class="ad_3"
-          src="media/WhatsApp Image 2022-02-26 at 18.42.13 (3).jpeg"
+          src="media/win.jpeg"
         />
       </div>
       <div class="ad_4_wrapper">
         <img
           id="ad_4"
           class="ad_4"
-          src="media/WhatsApp Image 2022-02-26 at 18.42.12.jpg"
+          src="media/mcdonalds.jpg"
         />
       </div>
       <div class="ad_5_wrapper">
         <img
           id="ad_5"
           class="ad_5"
-          src="media/WhatsApp Image 2022-02-26 at 18.42.13 (5).jpeg"
+          src="media/revenue.jpeg"
         />
       </div>
       <div class="ad_6_wrapper">
         <img
           id="ad_6"
           class="ad_6"
-          src="media/WhatsApp Image 2022-02-26 at 18.42.13 (4).jpg"
+          src="media/offers.jpg"
         />
       </div>
       <div class="ad_7_wrapper">
         <img
           id="ad_7"
           class="ad_7"
-          src="media/WhatsApp Image 2022-02-26 at 18.42.13 (2).jpeg"
+          src="media/alert.jpeg"
         />
       </div>
 
