--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img
         id="ad_8"
         class="ad_8"
-        src="../media/finalimg.jpeg"
+        src="./media/finalimg.jpeg"
       />
     </div>
     <div id="main">
